<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragment.PersionalInfoFragment">

    <ImageView
        android:id="@+id/ask_icon"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/ask_student_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ask_question_btn"
        android:layout_below="@+id/ask_icon"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <LinearLayout
            style="@style/course_item_layout"
            android:layout_marginTop="4dp">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/student_name" />

            <TextView
                android:id="@+id/persional_name"
                style="@style/text_style"
                android:text="Bruce" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout">

            <TextView
                android:id="@+id/course_teacher_name"
                style="@style/stabilize_text_style"
                android:gravity="center"
                android:text="@string/student_class" />

            <TextView
                android:id="@+id/persional_class"
                style="@style/text_style"
                android:gravity="center_vertical"
                android:text="12计本一班" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/student_ID" />

            <TextView
                android:id="@+id/persional_id"
                style="@style/text_style"
                android:text="00111111" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/student_sex" />

            <TextView
                android:id="@+id/persional_sex"
                style="@style/text_style"
                android:text="男" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout"
            android:layout_height="wrap_content">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/student_phone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/persional_new_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/new_phone" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout"
            android:layout_height="wrap_content">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/student_password" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/persional_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/new_password" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/ask_question_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/persional_info_alter"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>

