<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragment.AttendStudentFragment">

    <LinearLayout
        android:id="@+id/attend_student_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/attend_student_status">

        <LinearLayout
            style="@style/course_item_layout"
            android:layout_marginTop="4dp">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/course_name" />

            <TextView
                android:id="@+id/attend_student_course_name"
                style="@style/text_style"
                android:text="汇编语言" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/course_address" />

            <TextView
                android:id="@+id/attend_student_course_address"
                style="@style/text_style"
                android:text="6栋101" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/course_time" />

            <TextView
                android:id="@+id/attend_student_course_time"
                style="@style/text_style"
                android:text="9:00-12:00" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/course_class_name" />

            <TextView
                android:id="@+id/attend_student_course_class"
                style="@style/text_style"
                android:text="12计本一班" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout">

            <TextView
                android:id="@+id/attend_student_course_teacher_name"
                style="@style/stabilize_text_style"
                android:text="@string/course_teacher_name" />

            <TextView
                android:id="@+id/attend_student_course_teacher"
                style="@style/text_style"
                android:text="张运波" />

        </LinearLayout>

        <LinearLayout style="@style/course_item_layout">

            <TextView
                style="@style/stabilize_text_style"
                android:text="@string/course_phone" />

            <TextView
                android:id="@+id/attend_student_course_phone"
                style="@style/text_style"
                android:text="11101011001" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/attend_student_no_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="无信息"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"/>
    
    <Button
        android:id="@+id/attend_student_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/attend_student_status"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
